--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "handlebar": "^1.0.0",
+    "express-handlebars": "^7.1.2",
     "mysql2": "^3.6.3"
   }
 }
